<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end|bottom"
                android:text="@string/zero" />
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_7"
                android:text="@string/seven"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_8"
                android:text="@string/eight"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_9"
                android:text="@string/nine"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick='button_plus'
                android:text="@string/plus"
                android:textColor="#000000"
                app:backgroundTint="#4CAF50"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_4"
                android:text="@string/four"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_5"
                android:text="@string/five"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_6"
                android:text="@string/six"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_minus"
                android:text="@string/minus"
                android:textColor="#000000"
                app:backgroundTint="#4CAF50"
                tools:ignore="UsingOnClickInXml" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_1"
                android:text="@string/one"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_2"
                android:text="@string/two"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_3"
                android:text="@string/three"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_multiply"
                android:text="@string/multiply"
                android:textColor="#000000"
                app:backgroundTint="#4CAF50"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_clear"
                android:text="@string/clear"
                android:textColor="#000000"
                app:backgroundTint="#2196F3"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_0"
                android:text="@string/zero"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_decimal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_decimal"
                android:text="@string/decimal"
                android:textColor="#000000"
                app:backgroundTint="#E3E3E3"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_divide"
                android:text="@string/divide"
                android:textColor="#000000"
                app:backgroundTint="#4CAF50"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml" />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="00dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#E3E3E3"
                android:onClick="button_equal"
                android:text="@string/equal"
                android:textColor="#000000"
                app:backgroundTint="#E91E63"
                app:cornerRadius="20dp"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>